<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/operador1"
        android:textAlignment="textStart"
        android:textColor="#070707"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editOperador1"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/introducir1"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="262dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/operador2"
        android:textColor="#070707"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOperador1"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editOperador2"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/introducir2"
        android:inputType="number"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/spOperacion"
        android:layout_width="286dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOperador2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:text="@string/calcular"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spOperacion"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="407dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:background="#323030"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#2196F3"
        android:text="@string/limpiar"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spOperacion" />
</androidx.constraintlayout.widget.ConstraintLayout>